--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -3,6 +3,8 @@
     background-color: #d1411e;
     /* overflow: hidden; */
     position: relative;
+    overflow: hidden;
+    position: relative;
 }
 
 .arrowContainer {
@@ -27,3 +29,10 @@
     height: 100%;
     position: relative;
   }
+@media screen and (max-width: 480px) {
+  .container{
+    height: 50vh;
+  }
+  }
+
+ 
