--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -77,4 +77,14 @@
     align-items: center;
 }
 
+/* resposive design for mobile devices */
+@media screen and (max-width:480px) {
+    .item:nth-child(2) {
+      display: none;
+    }
+  
+    .item:nth-child(1) {
+      flex: 3;
+    }
+  }
 
