--- a/styles/DressCard.module.css
+++ b/styles/DressCard.module.css
@@ -30,3 +30,14 @@
     text-align: center;
     font-size: 16;
 }
+@media screen and (max-width:480px) {
+    .container{
+        width: 100%;
+    }
+    .title{
+        font-size: 30px;
+    }
+    .price, .desc{
+        font-size: 24px;
+    }
+}
