--- a/styles/DressList.module.css
+++ b/styles/DressList.module.css
@@ -17,3 +17,13 @@
     flex-wrap: wrap;
     
 }
+@media screen and (max-width: 480px) {
+   .title{
+    text-align: center;
+   }
+   .desc{
+    width:90%;
+    text-align: center;
+   }
+   
+}
