--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,124 +1,166 @@
 .container {
-    height: calc(100vh - 100px);
-    display: flex;
-    /* background-color:#222; */
+  height: calc(100vh - 100px);
+  display: flex;
+  /* background-color:#222; */
 }
 
 .left {
-    flex: 1;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
+  flex: 1;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
 .right {
-    flex: 1;
-    padding: 20px;
+  flex: 1;
+  padding: 20px;
 
 }
 
 .imgContainer {
-    width: 100%;
-    height: 100%;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .price {
-    color: #d1411e;
-    font-size: 24px;
-    font-weight: 400;
-    border-bottom: 1px solid #d1411e;
-  }
-  
-  .sizes {
-    width: 40%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .size {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    cursor: pointer;
-    /* border-bottom: 1px solid #d1411e; */
-  }
-  .size:hover{
-    background-color: #eeb7a9;
+  color: #d1411e;
+  font-size: 24px;
+  font-weight: 400;
+  border-bottom: 1px solid #d1411e;
+}
+
+.sizes {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.size {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  cursor: pointer;
+  /* border-bottom: 1px solid #d1411e; */
+}
+
+.size:hover {
+  background-color: #eeb7a9;
+}
+
+.choose {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #d1411e;
+}
+
+.size:nth-child(2) {
+  width: 40px;
+  height: 40px;
+}
+
+.size:last-child {
+  width: 50px;
+  height: 50px;
+}
+
+.number {
+  position: absolute;
+  top: -5px;
+  right: -20px;
+  background-color: teal;
+  color: white;
+  font-size: 12px;
+  padding: 0 5px;
+  border-radius: 10px;
+}
+
+.colors {
+  display: flex;
+  margin-bottom: 30px;
+  /* justify-content: space-between; */
+}
+
+.option {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+
+}
+
+.add {
+  width: 100%;
+  height: 50px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  /* border-radius: 5px; */
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.quantity {
+  width: 20%;
+  height: 30px;
+}
+
+.button {
+  height: 30px;
+  margin-left: 10px;
+  background-color: #d1411e;
+  color: aliceblue;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.3rem;
+}
+
+
+@media screen and (max-width: 480px) {
+  .container {
+    height: auto;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 20px;
   }
 
-  .choose{
-    font-size: 1rem;
-    font-weight: bold;
-    color: #d1411e;
+  .imgContainer {
+    width: 70vw;
+    height: 70vw;
   }
-  
-  .size:nth-child(2) {
-    width: 40px;
-    height: 40px;
+
+  .title{
+    margin: 5px;
   }
-  
-  .size:last-child {
-    width: 50px;
-    height: 50px;
-  }
-  
-  .number {
-    position: absolute;
-    top: -5px;
-    right: -20px;
-    background-color: teal;
-    color: white;
-    font-size: 12px;
-    padding: 0 5px;
-    border-radius: 10px;
+  .sizes{
+    width: 100%;
+    padding: 0 20px;
   }
   .colors{
-    display: flex;
-    margin-bottom: 30px;
-    /* justify-content: space-between; */
+flex-direction: column;
+
   }
-  
   .option{
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
-    font-size: 14px;
-    font-weight: bold;
-  }
-
-  .checkbox{
-    width: 20px;
-    height: 20px;
-    
-  }
-
-  .add{
-    width: 100%;
-    height: 50px;
-    color: white;
+    margin: 10px;
     font-size: 18px;
-    font-weight: bold;
-    /* border-radius: 5px; */
-    margin-top: 20px;
-    cursor: pointer;
   }
-  .quantity{
-    width: 20%;
-    height: 30px;
+  .checkbox{
+    width: 25px;
+    height: 25px;
   }
+  .button, .quantity{
+  height: 50px;
+    padding:10px 20px;
 
-  .button{
-    height: 30px;
-    margin-left: 10px;
-    background-color: #d1411e;
-    color:aliceblue;
-    font-weight: 500;
-    border:none;
-    cursor: pointer;
-    border-radius: 0.3rem;
   }
 
-
+  }
